--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <div class="header" id="header">
+	<div>
+	<p>Priveeeetttttt</p>
+	</div>
         <div class="logo">
             <a href="#header"><img src="images/logo.png" alt=""></a>
             <div class="slogan">Успех начинается с надежных партнеров</div>
